@@ -1,10 +1,7 @@
 package com.service.serviceimpl;
 
-import java.lang.reflect.Array;
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
 import java.util.stream.Collectors;
 
 import org.slf4j.LoggerFactory;
@@ -13,67 +10,74 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
-import com.service.exception.idisNotFound;
 import com.service.model.Hotel;
 import com.service.model.Rateing;
 import com.service.model.User;
 import com.service.repository.UserRepository;
 import com.service.service.UserService;
 
-import ch.qos.logback.classic.Logger;
+import io.github.resilience4j.circuitbreaker.annotation.CircuitBreaker;
 
 @Service
 public class UserServiceImpl implements UserService {
 
-	private static final org.slf4j.Logger logger = LoggerFactory.getLogger(UserServiceImpl.class);
-	 
+	private org.slf4j.Logger log = LoggerFactory.getLogger(UserServiceImpl.class);
+              
 	@Autowired
 	private UserRepository userRepository;
 	@Autowired
 	private RestTemplate restTemplate;
-
+//	@Autowired
+//     private HotelService hotelService;
 	@Override
 	public User saveUser(User user) {
 		User use = userRepository.save(user);
 		return use;
 	}
-
+   
 	@Override
 	public List<User> getAllUser() {
 		List<User> list = userRepository.findAll();
 		return list;
 	}
 
+	// we will get single user based on id we need to call the rating service
 	@Override
+	  
 	public User getUserFindByid(Integer id) {
 		User user = userRepository.findById(id);
-
-		Rateing [] forObject = restTemplate.getForObject("http://RATEINGMICROSERVICE/getdata"+user.getId(), Rateing[].class);
-               List<Rateing> rate= Arrays.stream(forObject).toList();
-		        user.setSetrate(rate);
+		// get the rating service about the user
+		// url : http://localhost:9090/users/1
+   // "http://RATEINGMICROSERVICE/ratings/users/" + id, Rateing[].class
+	// "http://RATEINGMICROSERVICE/users/1"	
+		Rateing[] ratingOfUserdata = restTemplate.getForObject("http://RATEINGMICROSERVICE/ratings/users/"+id , Rateing[].class
+				);
 		
-               logger.info("Logger check for Application"+forObject);
-               
-              List<Rateing> rateinglist = rate.stream().map(rating ->{
-            	   // api call the get the hotel service to get api
-            	   
-            	  ResponseEntity<Hotel>  forentity=   restTemplate.getForEntity("http://USERMICROSERVICES/getdata/2", Hotel.class);
-            	  
-            	  Hotel hotel= forentity.getBody();
-            	     // set the hotel to rating 
-            	       rating.setHotel(hotel);
-                    return rating;
-               }).collect(Collectors.toList());
-                user.setSetrate(rateinglist);
-                user.setSetrate(rate);
-        		
-           		if (user == null) {
-			System.out.println("user value is ::" + user);
-			throw new idisNotFound("id is not found");
-		}
-           		
-           		
-           		
+		List<Rateing> rateings=Arrays.stream(ratingOfUserdata).toList();
+
+		List<Rateing> ratinglist = rateings.stream().map(rating -> {
+			// api call to hotel service get the hotel service                    we are using dynamic id get though the id
+			ResponseEntity<Hotel> forEntity = restTemplate.getForEntity("http://HOTELMICROSERVICE/hotels/getbyid/1", Hotel.class);
+			Hotel hotel = forEntity.getBody();
+			
+			  System.err.println("Hotel response"+forEntity);
+			  log.info("i am inside the getUserFindById method"+forEntity);
+			log.info("Response status code:", forEntity.getStatusCode());
+			// set hotel to rating
+			// return the rating
+			// return rating 
+			rating.setHotel(hotel);
+			return rating;
+
+		}).collect(Collectors.toList());
+		user.setSetrate(ratinglist);
+
+//			if (user == null) {
+//			System.out.println("user value is ::" + user);
+//			throw new idisNotFound("id is not found");
+//		}
 		return user;
+
 	}
+	
 }
